--- a/client/src/components/DriverColumnItem.scss
+++ b/client/src/components/DriverColumnItem.scss
@@ -5,12 +5,13 @@
   margin: 0 4px;
   vertical-align: top;
   white-space: nowrap;
-  width: 272px;
+  width: 500px;
   border: 3px solid black;
 }
 
 .list-header {
   flex: 0 0 auto;
+  text-align: center;
   min-height: 20px;
   padding: 10px 8px;
   position: relative;
