--- a/client/src/components/DriverColumnItem.scss
+++ b/client/src/components/DriverColumnItem.scss
@@ -7,6 +7,11 @@
   white-space: nowrap;
   width: 500px;
   border: 3px solid black;
+
+  ul {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .list-header {
