--- a/client/src/components/DriverColumnItem.scss
+++ b/client/src/components/DriverColumnItem.scss
@@ -14,6 +14,14 @@
   }
 }
 
+.list-heading {
+  padding: 0px, 16px, 0px, 16px;
+  padding-bottom: 0px;
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+}
+
 .list-header {
   flex: 0 0 auto;
   text-align: center;
