--- a/client/src/components/DriverColumnItem.scss
+++ b/client/src/components/DriverColumnItem.scss
@@ -2,11 +2,12 @@
   box-sizing: border-box;
   display: inline-block;
   height: 100%;
-  margin: 0 4px;
+  margin: 0 5px;
   vertical-align: top;
   white-space: nowrap;
-  width: 500px;
+  width: 100%;
   border: 3px solid black;
+  margin-top: 20px;
 
   ul {
     padding-left: 10px;
@@ -33,4 +34,8 @@
 
 .list-item {
   padding-top: 15px;
+}
+
+.driver-col {
+  display: flex;
 }
