--- a/client/src/components/DriverColumnItem.scss
+++ b/client/src/components/DriverColumnItem.scss
@@ -1,7 +1,7 @@
 .list-wrapper {
   box-sizing: border-box;
   display: inline-block;
-  height: 100%;
+  height: 800px;
   margin: 0 5px;
   vertical-align: top;
   white-space: nowrap;
