--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -1,5 +1,5 @@
-@import "./Order.scss";
-@import "./DriverColumnItem.scss";
+@import "./Card.scss";
+@import "./Column.scss";
 .App {
   text-align: center;
 }
