--- a/client/src/components/Card.scss
+++ b/client/src/components/Card.scss
@@ -5,4 +5,15 @@
   background-color: #f1f1f1;
   display: flex;
   justify-content: space-between;
+
+  .form {
+    display: flex;
+    justify-content: space-evenly;
+
+    .input {
+      width: 100px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+  }
 }
