--- a/client/src/components/Column.scss
+++ b/client/src/components/Column.scss
@@ -6,12 +6,13 @@
   vertical-align: top;
   white-space: nowrap;
   width: 100%;
-  border: 3px solid black;
+  border: 2px solid black;
   margin-top: 20px;
 
   ul {
     padding-left: 10px;
     padding-right: 10px;
+    list-style: none;
   }
 }
 
@@ -29,7 +30,6 @@
   min-height: 20px;
   padding: 10px 8px;
   position: relative;
-  background-color: red;
 }
 
 .list-item {
