--- a/client/src/components/Column.scss
+++ b/client/src/components/Column.scss
@@ -22,6 +22,8 @@
     height: 100%;
 
     .total {
+      display: flex;
+      justify-content: space-between;
       margin-top: auto;
     }
   }
