--- a/client/src/components/Card.scss
+++ b/client/src/components/Card.scss
@@ -4,7 +4,7 @@
   text-align: left;
   background-color: #f1f1f1;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 
   .form {
     display: flex;
